--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -6,9 +6,9 @@ name: CI
 # events but only for the main branch
 on:
   push:
-    branches: [ main ]
+    branches: [ main,development ]
   pull_request:
-    branches: [ main ]
+    branches: [ main,development ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,7 +24,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run install
-        run: $GITHUB_WORKSPACE/extras/testgitflow.sh
+        run: $GITHUB_WORKSPACE/install.sh
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
