--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -26,11 +26,14 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run install
-        run: $GITHUB_WORKSPACE/install.sh
+      #- name: Run install
+      #  run: $GITHUB_WORKSPACE/install.sh
 
       # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
+      - name: Run a multi-line script
+        run: |
+          $GITHUB_WORKSPACE/install.sh
+          sideload
+          whitewhidow-mount
+          sideload-gui
+          sideload-update
