--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           $GITHUB_WORKSPACE/install.sh
           cd extras && sideload
-          whitewhidow-mount
+          whitewhidow-mount /mnt/tmp
           sideload-gui
           sideload-update
