--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -26,14 +26,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      #- name: Run install
-      #  run: $GITHUB_WORKSPACE/install.sh
-
+      - name: Run install
+        run: $GITHUB_WORKSPACE/install.sh
+      - name: Run sideload
+        run: cd extras && sideload
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          $GITHUB_WORKSPACE/install.sh
-          cd extras && sideload
-          whitewhidow-mount /mnt/tmp
-          sideload-gui
-          sideload-update
+      #- name: Run a multi-line script
+      #  run: |
+      #    $GITHUB_WORKSPACE/install.sh
+      #    cd extras && sideload
+      #    whitewhidow-mount /mnt/tmp
+      #    sideload-gui
+      #    sideload-update
