--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -28,6 +28,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run install
         run: $GITHUB_WORKSPACE/install.sh
+      - name: Run sideload-gui
+        run: sideload-gui
       - name: Run sideload
         run: cd extras && sideload
       # Runs a set of commands using the runners shell
