--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Wait
+        run: sleep 10
       - name: Run install
         run: $GITHUB_WORKSPACE/install.sh
       - name: Run sideload-gui
