--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -32,6 +32,8 @@ jobs:
         run: $GITHUB_WORKSPACE/install.sh local
       - name: Run sideload-gui
         run: sideload-gui
+      - name: Run ww-mount
+        run: whitewhidow-mount /mnt/tmp
       - name: Run sideload
         run: cd extras && sideload
       # Runs a set of commands using the runners shell
