--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -16,10 +16,9 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-linux:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -36,11 +35,34 @@ jobs:
         run: whitewhidow-mount /mnt/tmp
       - name: Run sideload
         run: cd extras && sideload
-      # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    $GITHUB_WORKSPACE/install.sh
-      #    cd extras && sideload
-      #    whitewhidow-mount /mnt/tmp
-      #    sideload-gui
-      #    sideload-update
+
+
+
+
+  build-mac:
+      # The type of runner that the job will run on
+      runs-on: macOS-latest
+      # Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
+        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+        - uses: actions/checkout@v2
+
+        # Runs a single command using the runners shell
+        - name: Wait
+          run: sleep 10
+        - name: Run install
+          run: $GITHUB_WORKSPACE/install.sh local
+        - name: Run sideload-gui
+          run: sideload-gui
+        - name: Run ww-mount
+          run: whitewhidow-mount /mnt/tmp
+        - name: Run sideload
+          run: cd extras && sideload
+        # Runs a set of commands using the runners shell
+        #- name: Run a multi-line script
+        #  run: |
+        #    $GITHUB_WORKSPACE/install.sh
+        #    cd extras && sideload
+        #    whitewhidow-mount /mnt/tmp
+        #    sideload-gui
+        #    sideload-update
