--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -41,7 +41,7 @@ jobs:
 
 
 
-  build-mac:
+  build-mac-cataline:
       # The type of runner that the job will run on
       runs-on: macOS-latest
       # Steps represent a sequence of tasks that will be executed as part of the job
@@ -52,6 +52,32 @@ jobs:
         # Runs a single command using the runners shell
         - name: Remove brew
           run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
+        - name: Run install
+          run: $GITHUB_WORKSPACE/install local
+        - name: Run sideload
+          run: cd extras && sideload
+        - name: Run sideload-gui
+          run: sideload-gui
+        - name: Run ww-mount
+          run: whitewhidow-mount /mnt/tmp
+        - name: Run sideload
+          run: cd extras && sideload
+        # Runs a set of commands using the runners shell
+        #- name: Run a multi-line script
+        #  run: |
+        #    $GITHUB_WORKSPACE/install.sh
+        #    cd extras && sideload
+        #    whitewhidow-mount /mnt/tmp
+        #    sideload-gui
+        #    sideload-update
+  build-mac-11:
+      # The type of runner that the job will run on
+      runs-on: macos-11.0
+      # Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
+        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+        - uses: actions/checkout@v2
+        # Runs a single command using the runners shell
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
         - name: Run sideload
