--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -51,7 +51,7 @@ jobs:
 
         # Runs a single command using the runners shell
         - name: Remove brew
-          run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
+          run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)" > /dev/null
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
         - name: Run sideload
@@ -75,6 +75,8 @@ jobs:
       runs-on: macos-11.0
       # Steps represent a sequence of tasks that will be executed as part of the job
       steps:
+        - name: Remove brew
+          run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)" 
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
         - uses: actions/checkout@v2
         # Runs a single command using the runners shell
