--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -50,8 +50,10 @@ jobs:
         - uses: actions/checkout@v2
 
         # Runs a single command using the runners shell
+        - name: remove xcode
+          run: rm -rf /Library/Developer/CommandLineTools/*
         - name: Remove brew
-          run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)" > /dev/null
+          run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
         - name: Run sideload
@@ -75,6 +77,8 @@ jobs:
       runs-on: macos-11.0
       # Steps represent a sequence of tasks that will be executed as part of the job
       steps:
+        - name: remove xcode
+          run: rm -rf /Library/Developer/CommandLineTools/*
         - name: Remove brew
           run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)" 
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
