--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -51,7 +51,7 @@ jobs:
 
         # Runs a single command using the runners shell
         - name: remove xcode
-          run: rm -rf /Library/Developer/CommandLineTools/*
+          run: sude mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
         - name: Remove brew
           run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         - name: Run install
@@ -77,8 +77,6 @@ jobs:
       runs-on: macos-11.0
       # Steps represent a sequence of tasks that will be executed as part of the job
       steps:
-        - name: remove xcode
-          run: rm -rf /Library/Developer/CommandLineTools/*
         - name: Remove brew
           run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)" 
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
