--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -51,7 +51,7 @@ jobs:
 
         # Runs a single command using the runners shell
         - name: remove xcode
-          run: sude mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
+          run: sudo mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
         - name: Remove brew
           run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         - name: Run install
