--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -77,6 +77,8 @@ jobs:
       runs-on: macos-11.0
       # Steps represent a sequence of tasks that will be executed as part of the job
       steps:
+        - name: remove xcode
+          run: sudo mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
         - name: Remove brew
           run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)" 
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
