--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -15,7 +15,7 @@ on:
       - development
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-mac-11:
+  build-mac-big-sur:
       # The type of runner that the job will run on
       runs-on: macos-11.0
       # Steps represent a sequence of tasks that will be executed as part of the job
