--- a/.github/workflows/gitflow-mac-catalina.yml
+++ b/.github/workflows/gitflow-mac-catalina.yml
@@ -18,7 +18,7 @@ jobs:
 
 
 
-  build-mac-cataline:
+  build-mac-catalina:
     # The type of runner that the job will run on
     runs-on: macOS-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
