osxfuse crap (plus xcode)

--- a/.github/workflows/gitflow-mac-catalina-bare.yml
+++ b/.github/workflows/gitflow-mac-catalina-bare.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI-CATALINA
+name: CI-CATALINA-BARE
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
@@ -18,7 +18,7 @@ jobs:
 
 
 
-  build-mac-catalina:
+  build-mac-catalina-bare:
     # The type of runner that the job will run on
     runs-on: macOS-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -27,6 +27,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: remove xcode
+        run: sudo mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
+      - name: Remove brew
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
       - name: Run install
         run: $GITHUB_WORKSPACE/install local
