--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -36,4 +36,4 @@ jobs:
         - name: Run ww-mount
           run: whitewhidow-mount /tmp/mnt
         - name: Run sideload
-          run: cd extras && sideload
+          run: cd $(ls -d */|head -n 1) && sideload
