--- a/.github/workflows/gitflow-mac-catalina-bare.yml
+++ b/.github/workflows/gitflow-mac-catalina-bare.yml
@@ -40,4 +40,4 @@ jobs:
       - name: Run ww-mount
         run: whitewhidow-mount /tmp/mnt
       - name: Run sideload
-        run: cd /tmp/mnt && cd $(ls -d */|head -n 1) && sideload
+        run: cd /tmp/mnt && cd "$(ls -d */|head -n 1)" && sideload
