CHANGED CI FLOW FOR LINUX ?

--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -21,10 +21,10 @@ jobs:
       steps:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
         - uses: actions/checkout@v2
-        - name: remove xcode
-          run: sudo mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
-        - name: Remove brew
-          run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
+        #- name: remove xcode
+        #  run: sudo mv /Library/Developer/CommandLineTools/ /Library/Developer/CommandLineTools2 && sudo mkdir /Library/Developer/CommandLineTools/
+        #- name: Remove brew
+        #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         # Runs a single command using the runners shell
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
