--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -28,11 +28,16 @@ jobs:
         run: sleep 10
       - name: Run install
         run: $GITHUB_WORKSPACE/install local
-      - name: Run sideload
-        run: cd extras && sideload
       - name: Run sideload-gui
         run: sideload-gui
-      - name: Run ww-mount
-        run: whitewhidow-mount /tmp/mnt
-      - name: Run sideload
-        run: cd /tmp/mnt && cd "$(ls -d */|head -n 1)" && sideload
+
+
+
+      #- name: Run sideload
+      #  run: cd extras && sideload
+      #- name: Run sideload-gui
+      #  run: sideload-gui
+      #- name: Run ww-mount
+      #  run: whitewhidow-mount /tmp/mnt
+      #- name: Run sideload
+      #  run: cd /tmp/mnt && cd "$(ls -d */|head -n 1)" && sideload
