CHANGED CI FLOW FOR LINUX ?

--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -28,6 +28,8 @@ jobs:
         run: $GITHUB_WORKSPACE/install local
       - name: Run sideload-gui
         run: sideload-gui
+      - name: Run ww-mount
+        run: whitewhidow-mount /tmp/mnt
 
 
 
