--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -32,3 +32,5 @@ jobs:
           run: cd extras && sideload
         - name: Run sideload-gui
           run: sideload-gui
+        - name: Run ww-mount
+          run: whitewhidow-mount /tmp/mnt
