--- a/.github/workflows/gitflow-mac-catalina-bare.yml
+++ b/.github/workflows/gitflow-mac-catalina-bare.yml
@@ -36,3 +36,5 @@ jobs:
         run: cd extras && sideload
       - name: Run sideload-gui
         run: sideload-gui
+      - name: Run ww-mount
+        run: whitewhidow-mount /tmp/mnt
