--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -26,6 +26,8 @@ jobs:
         #- name: Remove brew
         #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         # Runs a single command using the runners shell
+        - name: test bigsurshit
+          run: brew install autoconf automake libtool gettext && brew link --force gettext && brew install osxfuse
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
         - name: Run sideload
@@ -34,3 +36,5 @@ jobs:
           run: whitewhidow-mount /tmp/mnt
         - name: Run sideload-gui
           run: sideload-gui
+
+
