--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -27,7 +27,7 @@ jobs:
         #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         # Runs a single command using the runners shell
         - name: Run install
-          run: $GITHUB_WORKSPACE/install local
+          run: $GITHUB_WORKSPACE/install local $$ brew install sshfs
         - name: Run sideload
           run: cd extras && sideload
         - name: Run ww-mount
