--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -27,7 +27,7 @@ jobs:
         #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         # Runs a single command using the runners shell
         - name: Run ww-mount
-          run: brew install osxfuse && ./whitewhidow-mount /tmp/mnt
+          run: sudo brew install osxfuse && ./whitewhidow-mount /tmp/mnt
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
         - name: Run sideload
