--- a/.github/workflows/gitflow-mac-big-sur.yml
+++ b/.github/workflows/gitflow-mac-big-sur.yml
@@ -26,8 +26,8 @@ jobs:
         #- name: Remove brew
         #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
         # Runs a single command using the runners shell
-        - name: Run ww-mount
-          run: sudo brew install osxfuse && ./whitewhidow-mount /tmp/mnt
+        - name: osxfuse and mount test
+          run: brew install osxfuse && ./whitewhidow-mount /tmp/mnt
         - name: Run install
           run: $GITHUB_WORKSPACE/install local
         - name: Run sideload
