--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -30,6 +30,14 @@ jobs:
         run: sideload-gui
       - name: Run ww-mount
         run: whitewhidow-mount /tmp/mnt
+      - name: Run badges
+        run: extras/create_badgelist.sh
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: badges
+          path: /tmp/badges.txt
+
 
 
 
