--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -32,11 +32,11 @@ jobs:
         run: whitewhidow-mount /tmp/mnt
       - name: Run badges
         run: extras/v.sh
-      #- name: Upload Build Artifact
-      #  uses: actions/upload-artifact@v2
-      #  with:
-      #    name: badges
-      #    path: /tmp/badges
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: badges
+          path: /tmp/badges
 
 
 
