--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -30,7 +30,11 @@ jobs:
         run: sideload-gui
       - name: Run ww-mount
         run: whitewhidow-mount /tmp/mnt
-
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: badges
+          path: /tmp/badges
 
 
 
