--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -29,12 +29,7 @@ jobs:
       - name: Run sideload-gui
         run: sideload-gui
       - name: Run ww-mount
-        run: whitewhidow-mount /tmp/mnt
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: badges
-          path: /tmp/badges
+        run: whitewhidow-mount /tmp/mnt mount
 
 
 
