--- a/.github/workflows/gitflow-mac-catalina-bare.yml
+++ b/.github/workflows/gitflow-mac-catalina-bare.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run sideload-gui
         run: sideload-gui
       - name: Run ww-mount
-        run: whitewhidow-mount /tmp/mnt mount
+        run: whitewhidow-mount mount
