--- a/.github/workflows/gitflow-badges.yml
+++ b/.github/workflows/gitflow-badges.yml
@@ -28,8 +28,8 @@ jobs:
         run: $GITHUB_WORKSPACE/install local
       - name: Run ww-mount
         run: whitewhidow-mount mount
-      - name: check-updates
-        run: sideload-check-updates
+      - name: updatebadges
+        run: sideload-updatebadges
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2
         with:
