--- a/.github/workflows/gitflow-mac-catalina.yml
+++ b/.github/workflows/gitflow-mac-catalina.yml
@@ -34,3 +34,5 @@ jobs:
         run: sideload-gui
       - name: Run ww-mount
         run: whitewhidow-mount mount
+      - name: check-updates
+        run: sideload-check-updates
