--- a/.github/workflows/gitflow-mac-catalina.yml
+++ b/.github/workflows/gitflow-mac-catalina.yml
@@ -30,9 +30,9 @@ jobs:
         run: $GITHUB_WORKSPACE/install local
       - name: Run sideload
         run: cd extras && sideload
+      - name: Run sideload-mount
+        run: sideload-mount mount
       - name: Run sideload-gui
         run: sideload-gui
-      - name: Run ww-mount
-        run: whitewhidow-mount mount
       - name: check-updates
         run: sideload-check-updates
