--- a/.github/workflows/gitflow-badges.yml
+++ b/.github/workflows/gitflow-badges.yml
@@ -41,8 +41,8 @@ jobs:
 
       #- name: Run sideload
       #  run: cd extras && sideload
-      #- name: Run sideload-gui
-      #  run: sideload-gui
+      #- name: Run sideload-browser
+      #  run: sideload-browser
       #- name: Run ww-mount
       #  run: whitewhidow-mount /tmp/mnt
       #- name: Run sideload
