--- a/.github/workflows/gitflow-linux.yml
+++ b/.github/workflows/gitflow-linux.yml
@@ -29,16 +29,16 @@ jobs:
         run: $GITHUB_WORKSPACE/install local
       - name: Run sideload-mount
         run: sideload-mount mount
-      - name: Run sideload-gui
-        run: sideload-gui
+      - name: Run sideload-browser
+        run: sideload-browser
       - name: check-updates
         run: sideload-check-updates
 
 
       #- name: Run sideload
       #  run: cd extras && sideload
-      #- name: Run sideload-gui
-      #  run: sideload-gui
+      #- name: Run sideload-browser
+      #  run: sideload-browser
       #- name: Run ww-mount
       #  run: whitewhidow-mount /tmp/mnt
       #- name: Run sideload
