--- a/.github/workflows/gitflow-mac-catalina.yml
+++ b/.github/workflows/gitflow-mac-catalina.yml
@@ -32,7 +32,7 @@ jobs:
         run: cd extras && sideload
       - name: Run sideload-mount
         run: sideload-mount mount
-      - name: Run sideload-gui
-        run: sideload-gui
+      - name: Run sideload-browser
+        run: sideload-browser
       - name: check-updates
         run: sideload-check-updates
