--- a/.github/workflows/gitflow-mac-catalina.yml
+++ b/.github/workflows/gitflow-mac-catalina.yml
@@ -34,5 +34,7 @@ jobs:
         run: sideload-mount mount
       - name: Run sideload-browser
         run: sideload-browser
+      - name: Run sideload
+        run: cd extras && sideload
       - name: check-updates
         run: sideload-check-updates
