--- a/.github/workflows/gitflow-mac-catalina-bare.yml
+++ b/.github/workflows/gitflow-mac-catalina-bare.yml
@@ -32,5 +32,7 @@ jobs:
         run: sideload-mount mount
       - name: Run sideload-browser
         run: sideload-browser
+      - name: Run sideload
+        run: cd extras && sideload
       - name: check-updates
         run: sideload-check-updates
